k8s/local/azurestorage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azurestorage
  namespace: infrastructure
spec:
  selector:
    app: azurestorage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
